# codepractice

./: CMakeLists.txt  main.cpp  mani.cpp  practice.cpp
Arrays/: Kadanes_algo.cpp  array_rotate.cpp
BADE-SAWAAL/: Coins_perm_comb.cpp  Crypto_arithmetic.cpp  N_Knights1.cpp  N_knights_boxes_at_levels.cpp  Sodoku1.cpp  WordBreak_mango.cpp  combination1_obj_in_boxes.cpp  combination2_B_at_levels.cpp  encodings_1123_to_aabc.cpp  flood-fill.cpp  nqueens1.cpp  nqueens_boxes_at_levels.cpp  permu_obj_in_boxes.cpp  permutaion2_B_at_levels.cpp
Dynamic-Programming/: DP-Stairs.cpp  DP-fibonacci.cpp  DP-maze-jail-coin.cpp  Dp-Goldmine.cpp  Dp-climbUpstairs.cpp
GFG{trying}/: Combination_sum_coin_change_like.cpp  NQueen_Problem.cpp  Rat_in_maze1.cpp  SodokuGFG.cpp  all_possible_strings .cpp  boolean_matrixGFG.cpp  floodfill-gfg.cpp  permutaions_of_string.cpp  total_num_of_strings.cpp
GRAPHS/: Basic_graph.cpp  DijkastraAlgo.cpp  Knights_TOUR.cpp  graph_HamiltonianPathCycle.cpp  graph_HasPath.cpp  graph_printAllPaths.cpp
recursion/: TowerOfhanoi.cpp  array-jumps-index.cpp  matrix-1step.cpp  matrix-multidimension.cpp  recursion-all-combinations.cpp  recursion-factorial.cpp  recursion-power.cpp  recursion-strings_subsequences.cpp  recursion1.cpp  recursionwitharrays.cpp  remove-the-repeaters.cpp  replacing-duplicates-with-sum.cpp  stairs-recursion.cpp  vector-rotation.cpp  vectors.cpp
recursion-grp2-jaate_hue_print/: array-jump-index2.cpp  keypad-2.cpp  matrix_one-2.cpp  matrix_two-2.cpp  stair-path2.cpp  string_subsequesces-2.cpp
