cmake_minimum_required(VERSION 3.15)
project(untitled1)

set(CMAKE_CXX_STANDARD 14)
#
#set(BUILD_1 main)
#set(SOURCE_FILES_1 main.cpp)
#add_executable(${BUILD_1} ${SOURCE_FILES_1})
#set(BUILD_2 mani)
#set(SOURCE_FILES_2 mani.cpp)
#add_executable(${BUILD_2} ${SOURCE_FILES_2})
#

add_executable(main main.cpp)
add_executable(mani mani.cpp)
add_executable(recursion1 recursion/recursion1.cpp)
add_executable(recursion-factorial recursion/recursion-factorial.cpp)
add_executable(recursion-power recursion/recursion-power.cpp)
add_executable(recursionwitharrays recursion/recursionwitharrays.cpp)
add_executable(TowerOfhanoi recursion/TowerOfhanoi.cpp)
add_executable(vectors recursion/vectors.cpp)
add_executable(vector-rotation recursion/vector-rotation.cpp)
add_executable(remove-the-repeaters recursion/remove-the-repeaters.cpp)
add_executable(replacing-duplicates-with-sum recursion/replacing-duplicates-with-sum.cpp)
add_executable(recursion-strings_subsequences recursion/recursion-strings_subsequences.cpp)
add_executable(recursion-all-combinations recursion/recursion-all-combinations.cpp)
add_executable(stairs-recursion recursion/stairs-recursion.cpp)
add_executable(matrix-1step recursion/matrix-1step.cpp)
add_executable(matrix-multidimension recursion/matrix-multidimension.cpp)
add_executable(array-jumps-index recursion/array-jumps-index.cpp)
add_executable(string_subsequesces-2 recursion-grp2-jaate_hue_print/string_subsequesces-2.cpp)
add_executable(stair-path2 recursion-grp2-jaate_hue_print/stair-path2.cpp)
add_executable(keypad-2 recursion-grp2-jaate_hue_print/keypad-2.cpp)
add_executable(matrix_one-2 recursion-grp2-jaate_hue_print/matrix_one-2.cpp)
add_executable(matrix_two-2 recursion-grp2-jaate_hue_print/matrix_two-2.cpp)
add_executable(array-jump-index2 recursion-grp2-jaate_hue_print/array-jump-index2.cpp)
add_executable(flood-fill BADE-SAWAAL/flood-fill.cpp)
add_executable(permu_obj_in_boxes BADE-SAWAAL/permu_obj_in_boxes.cpp)
add_executable(combination2_B_at_levels BADE-SAWAAL/combination2_B_at_levels.cpp)
add_executable(permutaion2_B_at_levels BADE-SAWAAL/permutaion2_B_at_levels.cpp)
add_executable(combination1_obj_in_boxes BADE-SAWAAL/combination1_obj_in_boxes.cpp)
add_executable(Coins_perm_comb BADE-SAWAAL/Coins_perm_comb.cpp)
add_executable(nqueens1 BADE-SAWAAL/nqueens1.cpp)
add_executable(NQueen_Problem GFG{trying}/NQueen_Problem.cpp)
add_executable(N_Knights1 BADE-SAWAAL/N_Knights1.cpp)
add_executable(N_knights_boxes_at_levels BADE-SAWAAL/N_knights_boxes_at_levels.cpp)
add_executable(nqueens_boxes_at_levels BADE-SAWAAL/nqueens_boxes_at_levels.cpp)
add_executable(encodings_1123_to_aabc BADE-SAWAAL/encodings_1123_to_aabc.cpp)